# vsearch

./: Makefile.am  README.md  configure.ac
man/: Makefile.am  vsearch.1
src/: Makefile.am  Makefile.static  db.cc  linmemalign.cc  query.cc  util.cc  util.h  vsearch.h
